# end-to-end-data-pipeline

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  api.sh  docker-compose.yaml  main.py  models.py  pyproject.toml  router.py
.github/workflows/: cicd-pipeline.yml
config/: __init__.py  airflow_options.py  atlas_options.py  database_options.py  ge_options.py  github_options.py  kafka_options.py  minio_options.py  mlflow_options.py
healthchecks/: __init__.py  airflow.py  common.py  kafka.py  minio.py  mlflow.py  mysql.py  postgres.py
helm/e2e-pipeline/: values.yaml
helm/e2e-pipeline/templates/: python-api.yaml
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
services/: __init__.py  atlas_service.py  batch_service.py  ci_service.py  db_service.py  ge_validation_service.py  kafka_service.py  minio_service.py  mlflow_service.py  monitoring_service.py  streaming_service.py
